<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_movie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_picture_movie"
            android:layout_width="100dp"
            android:layout_height="120dp"
            tools:background="@color/black"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/image_movie" />

        <TextView
            android:id="@+id/tv_tag_viewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tag_viewed"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_title_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/tv_title_movie"
            android:textSize="20sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:maxLines="3"
            app:layout_constraintStart_toEndOf="@+id/iv_picture_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/iv_picture_movie"
            app:layout_constraintTop_toTopOf="@+id/iv_picture_movie" />

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_keyboard_arrow_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/iv_picture_movie"
            app:layout_constraintTop_toTopOf="@+id/iv_picture_movie"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>