<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.DetailsMovieFragment"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_movie"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginTop="24dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/iv_poster_movie"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/image_movie" />

        <TextView
            android:id="@+id/tv_original_title_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Original Title"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_id_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="ID"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_original_title_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_original_language_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Original Language"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_id_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_release_date_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Release Date"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_original_language_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_popularity_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Popularity"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_vote_average_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Vote Average"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_popularity_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_genre_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:text="Genre"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="40dp"
            android:drawableLeft="@drawable/ic_arrow_back"
            android:text="@string/btn_back"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>